# satsuki

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/lib/: api.ts
frontend/src/pages/: Landing.tsx  Manage.tsx
migrations/: 0001_init.sql
src/: auth.rs  config.rs  error.rs  lib.rs  validation.rs
src/api/: dns.rs  mod.rs  profile.rs
src/api/public/: mod.rs
src/db/: mod.rs  user_repo.rs
src/powerdns/: client.rs  mod.rs  types.rs
