[package]
name = "satsuki"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.7"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
lazy_static = "1.5.0"
rand_core = { version = "0.6.4", features = ["std", "getrandom"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "native-tls-vendored", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["derive", "sqlite", "chrono"] }
thiserror = "2.0.17"
