[package]
name = "satsuki"
version = "0.1.0"
edition = "2024"

include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE.*",
    "src/**",
    "migrations/**",
    "dist/**",
]

authors = ["metastable-void"]
description = "A Rust-based web frontend for delegating and managing subdomains under a configured base domain using PowerDNS. Users can register a subdomain, authenticate using Basic Auth, and manage DNS records through a simple API (to be consumed by a TypeScript web UI)."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/satsuki"
homepage = "https://github.com/metastable-void/satsuki"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.7"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
lazy_static = "1.5.0"
rand_core = { version = "0.6.4", features = ["std", "getrandom"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "native-tls-vendored", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["derive", "sqlite", "chrono", "runtime-tokio"] }
thiserror = "2.0.17"
tower-http = { version = "0.5.2", features = ["cors"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4.5.20", features = ["derive"] }
mime_guess = "2.0.5"
rust-embed = "8.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
